# dico-find

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/processor/: dicom_extractor.rs  file_scanner.rs  mod.rs
src/sync_processor/: mod.rs
