[package]
name = "dico-find"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.5.2", features = ["derive"] }
# console-subscriber = "0.2.0"
dicom-core = "0.6.3"
dicom-dictionary-std = "0.6.1"
dicom-object = "0.6.3"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
num_cpus = "1.16.0"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
